--- a/.github/workflows/ace3-ksu.yml
+++ b/.github/workflows/ace3-ksu.yml
@@ -1,145 +1,82 @@
-name: Build KernelSU Next SUSFS 
+name: 构建SM8550内核-KernelSU-Next-SUS 
+ 
 on:
   workflow_dispatch:
-    inputs:
-      CPU:
-        description: "分支"
-        required: true
-        default: 'sm8550'
-      FEIL:
-        description: "配置文件"
-        required: true
-        default: 'oneplus_12r_v'
-      CPUD:
-        description: "处理器代号"
-        required: true
-        default: 'kalama'
-      ANDROID_VERSION:
-        description: "内核安卓版本"
-        required: true 
-        default: 'android13'
-      KERNEL_VERSION:
-        description: "内核版本"
-        required: true
-        default: '5.15'
  
 jobs:
   build:
     runs-on: ubuntu-latest
  
     steps:
-      - name: Maximize build space
-        uses: easimon/maximize-build-space@master
-        with:
-          root-reserve-mb: 8192
-          temp-reserve-mb: 2048 
-          remove-dotnet: 'true'
-          remove-android: 'true'
-          remove-haskell: 'true'
-          remove-codeql: 'true'
+    - name: Maximize build space
+      uses: easimon/maximize-build-space@master
+      with:
+        root-reserve-mb: 8192
+        temp-reserve-mb: 2048 
+        remove-dotnet: 'true'
+        remove-android: 'true'
+        remove-haskell: 'true'
+        remove-codeql: 'true'
  
-      - name: Configure Git
-        run: |
-         git config --global user.name  "yuanqiongyoukong"
-         git config --global user.email  "413722718@qq.com" 
+    - name: Configure Git
+      run: |
+        git config --global user.name  "yuanqiongyoukong"
+        git config --global user.email  "413722718@qq.com" 
  
-      - name: Install dependencies
-        run: |
-         sudo apt update && sudo apt upgrade -y
-         sudo apt install -y python3 git curl 
+    - name: 安装编译环境
+      run: |
+        sudo apt update && sudo apt upgrade -y
+        sudo apt install ccache curl git repo python3 python-is-python3 -y
  
-      - name: Install repo tool 
-        run: |
-         curl https://storage.googleapis.com/git-repo-downloads/repo  > ~/repo
-         chmod a+x ~/repo
-         sudo mv ~/repo /usr/local/bin/repo
+    - name: 拉取oneplus 12r内核清单
+      run: |
+        mkdir -p kernel && cd kernel
+        repo init -u https://github.com/OnePlusOSS/kernel_manifest.git  -b oneplus/sm8550 -m oneplus_12r_v.xml  --depth=1
+        repo sync -j$(nproc --all)
  
-      - name: Initialize repo and sync
-        run: |
-         mkdir kernel_workspace && cd kernel_workspace
-         repo init -u https://github.com/OnePlusOSS/kernel_manifest.git  -b refs/heads/oneplus/${{ github.event.inputs.CPU  }} -m ${{ github.event.inputs.FEIL  }}.xml --depth=1
-         repo sync
-         ls -la
-         ls -la kernel_platform
-         rm kernel_platform/common/android/abi_gki_protected_exports_* || echo "No protected exports!"
-         rm kernel_platform/msm-kernel/android/abi_gki_protected_exports_* || echo "No protected exports!"
-         sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion
-         sed -i 's/ -dirty//g' kernel_platform/msm-kernel/scripts/setlocalversion
+    - name: 添加KernelSU Next
+      run: |
+        cd kernel/kernel_platform/common
+        curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh"  | bash -s next
  
-      - name: Check for Makefile
-        run: |
-         cd kernel_workspace/kernel_platform
-         if [ ! -f Makefile ]; then
-           echo "Error: Makefile not found in kernel_platform directory."
-           ls -la 
-           exit 1
-         fi 
+    - name: 添加SUSFS
+      run: |
+        cd kernel
+        git clone https://gitlab.com/simonpunk/susfs4ksu.git  -b gki-android13-5.15
+        git clone https://github.com/TheWildJames/kernel_patches.git 
+        cd kernel_platform 
+        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch  ./common/KernelSU-Next/
+        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-android13-5.15.patch  ./common/
+        cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
+        cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
  
-      - name: Set up KernelSU Next
-        run: |
-         cd kernel_workspace/kernel_platform
-         curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh"  | bash -s next 
-         cd KernelSU-Next
-         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
-         echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
-         sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
-        
-      - name: Set up susfs
-        run: |
-           cd kernel_workspace
-           git clone https://gitlab.com/simonpunk/susfs4ksu.git  -b gki-${{ github.event.inputs.ANDROID_VERSION  }}-${{ github.event.inputs.KERNEL_VERSION  }}
-           git clone https://github.com/TheWildJames/kernel_patches.git 
-           cd kernel_platform
-           cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch  ./KernelSU-Next/
-           cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION  }}-${{ github.event.inputs.KERNEL_VERSION  }}.patch ./common/
-           cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
-           cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
+        # Apply patches 
+        cd ./common/KernelSU-Next
+        patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || true
+        cd ..
+        patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch  || true 
+        cp ../../kernel_patches/69_hide_stuff.patch  ./
+        patch -p1 -F 3 < 69_hide_stuff.patch 
+        cp ../../kernel_patches/apk_sign.c_fix.patch  ./
+        patch -p1 -F 3 < apk_sign.c_fix.patch 
+        cp ../../kernel_patches/core_hook.c_fix.patch  ./
+        patch -p1 --fuzz=3 < ./core_hook.c_fix.patch 
+        cp ../../kernel_patches/selinux.c_fix.patch  ./
+        patch -p1 -F 3 < selinux.c_fix.patch 
  
-           # Apply patches
-           cd ./KernelSU-Next
-           patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || true 
-           cd ../common
-           patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION  }}-${{ github.event.inputs.KERNEL_VERSION  }}.patch || true
-           cp ../../kernel_patches/69_hide_stuff.patch  ./
-           patch -p1 -F 3 < 69_hide_stuff.patch 
-           git add -A && git commit -a -m "BUILD Kernel"
-           cd ..
-           cd ./msm-kernel && git add -A && git commit -a -m "BUILD Kernel"
-           cd ..
+    - name: 修改内核构建脚本
+      run: |
+        cd kernel/kernel_platform/oplus/build
+        sed -i '203a\export LTO=thin' oplus_setup.sh 
  
-           cp ../kernel_patches/apk_sign.c_fix.patch  ./
-           patch -p1 -F 3 < apk_sign.c_fix.patch 
+    - name: 编译内核
+      run: |
+        cd kernel
+        export LTO=thin 
+        ./kernel_platform/oplus/build/oplus_build_kernel.sh  kalama gki
  
-           cp ../kernel_patches/core_hook.c_fix.patch  ./
-           patch -p1 --fuzz=3 < ./core_hook.c_fix.patch 
- 
-           cp ../kernel_patches/selinux.c_fix.patch  ./
-           patch -p1 -F 3 < selinux.c_fix.patch  
- 
-      - name: Enable ThinLTO in kernel configuration 
-        run: |
-         cd kernel_workspace/kernel_platform
-         echo "CONFIG_THINLTO=y" >> .config
- 
-      - name: Build kernel with ThinLTO 
-        run: |
-         cd kernel_workspace
-         make -j$(nproc) O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- CC="clang" LLVM=1 LLVM_IAS=1 LLVM thinlto
- 
-      - name: Make AnyKernel3
-        run: |
-         git clone https://github.com/Kernel-SU/AnyKernel3  --depth=1
-         rm -rf ./AnyKernel3/.git
-         cp kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD  }}-gki/dist/Image ./AnyKernel3/
- 
-      - name: Upload AnyKernel3
-        uses: actions/upload-artifact@v4 
-        with:
-         name: AnyKernel3_KernelSU_Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL  }}
-         path: ./AnyKernel3/*
- 
-      - name: Upload Image
-        uses: actions/upload-artifact@v4 
-        with:
-         name: Image_KernelSU_Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL  }}
-         path: kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD  }}-gki/dist/Image
+    - name: Upload Image 
+      uses: actions/upload-artifact@v4
+      with:
+        name: Image-KernelSU_Next-SUSFS
+        path: kernel/out/dist/Image
