--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -1,11 +1,25 @@
-name: 构建ace3内核-KernelSU-Next-SUS
+name: 构建 ACE3 内核 - KernelSU-Next-SUS
  
 on:
   workflow_dispatch:
  
+env:
+  GIT_USER_NAME: yuanqiongyoukong 
+  GIT_USER_EMAIL: 413722718@qq.com 
+  KERNEL_DIR: kernel 
+  KERNEL_MANIFEST_URL: https://github.com/OnePlusOSS/kernel_manifest.git 
+  KERNEL_BRANCH: oneplus/sm8550
+  KERNEL_VERSION: 5.15
+  ANDROID_VERSION: android13
+  KERNEL_MANIFEST_FILE: oneplus_12r_v.xml 
+  KERNELSU_NEXT_URL: https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh 
+  SUSFS_REPO: https://gitlab.com/simonpunk/susfs4ksu.git  
+  PATCHES_REPO: https://github.com/TheWildJames/kernel_patches.git  
+  ANYKERNEL3_REPO: https://github.com/Kernel-SU/AnyKernel3 
+ 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest 
  
     steps:
     - name: 最大化构建空间
@@ -20,8 +34,8 @@ jobs:
  
     - name: 配置 Git 
       run: |
-        git config --global user.name  "yuanqiongyoukong"
-        git config --global user.email  "413722718@qq.com" 
+        git config --global user.name   "${{ env.GIT_USER_NAME }}"
+        git config --global user.email   "${{ env.GIT_USER_EMAIL }}"
  
     - name: 安装编译环境 
       run: |
@@ -30,21 +44,23 @@ jobs:
  
     - name: 拉取 Oneplus 12R 内核清单 
       run: |
-        mkdir -p kernel && cd kernel
-        repo init -u https://github.com/OnePlusOSS/kernel_manifest.git  -b oneplus/sm8550 -m oneplus_12r_v.xml  --depth=1
+        mkdir -p ${{ env.KERNEL_DIR }} && cd ${{ env.KERNEL_DIR }}
+        repo init -u ${{ env.KERNEL_MANIFEST_URL }} -b ${{ env.KERNEL_BRANCH }} -m ${{ env.KERNEL_MANIFEST_FILE }} --depth=1
         repo sync -j$(nproc --all)
+        sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion 
+        sed -i 's/ -dirty//g' kernel_platform/msm-kernel/scripts/setlocalversion
  
-    - name: 添加 KernelSU Next
+    - name: 添加 KernelSU Next 
       run: |
-        cd kernel/kernel_platform/common
-        curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh"  | bash -s next 
+        cd ${{ env.KERNEL_DIR }}/kernel_platform/common
+        curl -LSs ${{ env.KERNELSU_NEXT_URL }} | bash -s next 
  
     - name: 添加 SUSFS 
       run: |
-        cd kernel 
-        git clone https://gitlab.com/simonpunk/susfs4ksu.git  -b gki-android13-5.15
-        git clone https://github.com/TheWildJames/kernel_patches.git 
-        cd kernel_platform 
+        cd ${{ env.KERNEL_DIR }}
+        git clone ${{ env.SUSFS_REPO }} -b gki-android13-5.15
+        git clone ${{ env.PATCHES_REPO }}
+        cd kernel_platform
         cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch  ./common/KernelSU-Next/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-android13-5.15.patch  ./common/
         cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
@@ -55,28 +71,40 @@ jobs:
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || true
         cd ..
         patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch  || true
-        cp ../../kernel_patches/69_hide_stuff.patch  ./
-        patch -p1 -F 3 < 69_hide_stuff.patch 
-        cp ../../kernel_patches/apk_sign.c_fix.patch  ./
-        patch -p1 -F 3 < apk_sign.c_fix.patch  
-        cp ../../kernel_patches/core_hook.c_fix.patch  ./
-        patch -p1 --fuzz=3 < ./core_hook.c_fix.patch 
-        cp ../../kernel_patches/selinux.c_fix.patch  ./
-        patch -p1 -F 3 < selinux.c_fix.patch 
+        cp ../../kernel_patches/69_hide_stuff.patch  .
+        patch -p1 -F 3 < 69_hide_stuff.patch  
+        cp ../../kernel_patches/apk_sign.c_fix.patch  .
+        patch -p1 -F 3 < apk_sign.c_fix.patch   
+        cp ../../kernel_patches/core_hook.c_fix.patch  .
+        patch -p1 --fuzz=3 < ./core_hook.c_fix.patch  
+        cp ../../kernel_patches/selinux.c_fix.patch  .
+        patch -p1 -F 3 < selinux.c_fix.patch  
  
     - name: 修改内核构建脚本
       run: |
-        cd kernel/kernel_platform/oplus/build
-        sed -i '203a\export LTO=thin' oplus_setup.sh  
+        cd ${{ env.KERNEL_DIR }}/kernel_platform/oplus/build
+        sed -i '203a\export LTO=thin' oplus_setup.sh   
  
-    - name: 编译内核
+    - name: 编译内核 
       run: |
-        cd kernel
-        export LTO=thin
+        cd ${{ env.KERNEL_DIR }}
+        export LTO=thin 
         ./kernel_platform/oplus/build/oplus_build_kernel.sh  kalama gki
  
-    - name: 上传镜像
+    - name: 制作 AnyKernel3 
+      run: |
+        git clone ${{ env.ANYKERNEL3_REPO }} --depth=1
+        rm -rf ./AnyKernel3/.git 
+        cp ${{ env.KERNEL_DIR }}/out/dist/Image ./AnyKernel3/
+ 
+    - name: 上传 AnyKernel3 
       uses: actions/upload-artifact@v4
       with:
-        name: Image-KernelSU_Next-SUSFS
-        path: kernel/out/dist/Image
+        name: AnyKernel3_KernelSU_Next_5.15_oneplus_ace3_v 
+        path: ./AnyKernel3/*
+ 
+    - name: 上传镜像
+      uses: actions/upload-artifact@v4 
+      with:
+        name: Image-KernelSU_Next-SUSFS 
+        path: ${{ env.KERNEL_DIR }}/out/dist/Image
