--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -1,31 +1,49 @@
-name: 构建 ACE3 内核 - KernelSU-Next-SUS
+name: 构建 ACE3 内核 
  
 on:
   workflow_dispatch:
+    inputs:
+      CPU:
+        description: "分支"
+        required: true
+        default: 'sm8550'
+      FEIL:
+        description: "配置文件"
+        required: true 
+        default: 'oneplus_12r_v'
+      CPUD:
+        description: "处理器代号"
+        required: true
+        default: 'kalama'
+      ANDROID_VERSION:
+        description: "内核安卓版本"
+        required: true 
+        default: 'android13'
+      KERNEL_VERSION:
+        description: "内核版本"
+        required: true 
+        default: '5.15'
  
 env:
   GIT_USER_NAME: yuanqiongyoukong 
-  GIT_USER_EMAIL: 413722718@qq.com 
+  GIT_USER_EMAIL: 413722718@qq.com  
   KERNEL_DIR: kernel 
-  KERNEL_MANIFEST_URL: https://github.com/OnePlusOSS/kernel_manifest.git 
-  KERNEL_BRANCH: oneplus/sm8550
-  KERNEL_VERSION: 5.15
-  ANDROID_VERSION: android13
-  KERNEL_MANIFEST_FILE: oneplus_12r_v.xml 
-  KERNELSU_NEXT_URL: https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh 
+  KERNELSU_NAME: KernelSU-Next
+  KERNEL_MANIFEST_URL: https://github.com/OnePlusOSS/kernel_manifest.git  
+  KERNELSU_URL: https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh  
   SUSFS_REPO: https://gitlab.com/simonpunk/susfs4ksu.git  
   PATCHES_REPO: https://github.com/TheWildJames/kernel_patches.git  
-  ANYKERNEL3_REPO: https://github.com/Kernel-SU/AnyKernel3 
+  ANYKERNEL3_REPO: https://github.com/Kernel-SU/AnyKernel3  
  
 jobs:
   build:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
  
     steps:
-    - name: 最大化构建空间
-      uses: easimon/maximize-build-space@master
+    - name: 最大化构建空间 
+      uses: easimon/maximize-build-space@master 
       with:
-        root-reserve-mb: 8192
+        root-reserve-mb: 8192 
         temp-reserve-mb: 2048 
         remove-dotnet: 'true'
         remove-android: 'true'
@@ -37,74 +55,76 @@ jobs:
         git config --global user.name   "${{ env.GIT_USER_NAME }}"
         git config --global user.email   "${{ env.GIT_USER_EMAIL }}"
  
-    - name: 安装编译环境 
+    - name: 安装编译环境
       run: |
-        sudo apt update && sudo apt upgrade -y
+        sudo apt update && sudo apt upgrade -y 
         sudo apt install ccache curl git repo python3 python-is-python3 -y
  
-    - name: 拉取 Oneplus 12R 内核清单 
+    - name: 拉取内核清单
       run: |
         mkdir -p ${{ env.KERNEL_DIR }} && cd ${{ env.KERNEL_DIR }}
-        repo init -u ${{ env.KERNEL_MANIFEST_URL }} -b ${{ env.KERNEL_BRANCH }} -m ${{ env.KERNEL_MANIFEST_FILE }} --depth=1
+        repo init -u ${{ env.KERNEL_MANIFEST_URL }} -b oneplus/${{ github.event.inputs.CPU   }} -m ${{ github.event.inputs.FEIL   }}.xml --depth=1 
         repo sync -j$(nproc --all)
-        sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion 
-        sed -i 's/ -dirty//g' kernel_platform/msm-kernel/scripts/setlocalversion
+        rm -f ${{ env.KERNEL_DIR }}/kernel_platform/common/android/abi_gki_protected_exports_* || echo "No protected exports!"
+        rm -f ${{ env.KERNEL_DIR }}/kernel_platform/msm-kernel/android/abi_gki_protected_exports_* || echo "No protected exports!"
+        sed -i 's/ -dirty//g' common/scripts/setlocalversion msm-kernel/scripts/setlocalversion 
  
     - name: 添加 KernelSU Next 
       run: |
         cd ${{ env.KERNEL_DIR }}/kernel_platform/common
-        curl -LSs ${{ env.KERNELSU_NEXT_URL }} | bash -s next 
+        curl -LSs ${{ env.KERNELSU_URL }} | bash -s next 
+        cd ${{ env.KERNELSU_NAME }}
+        KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) + 10200)
+        echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
+        sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" ${{ env.KERNEL_DIR }}/kernel/Makefile 
  
-    - name: 添加 SUSFS 
+    - name: 添加 SUSFS
       run: |
         cd ${{ env.KERNEL_DIR }}
-        git clone ${{ env.SUSFS_REPO }} -b gki-android13-5.15
+        git clone ${{ env.SUSFS_REPO }} -b gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}
         git clone ${{ env.PATCHES_REPO }}
         cd kernel_platform
-        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch  ./common/KernelSU-Next/
-        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-android13-5.15.patch  ./common/
+        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch   ./common/${{ env.KERNELSU_NAME }}/
+        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}.patch ./common/
         cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
  
-        # 应用补丁
-        cd ./common/KernelSU-Next
-        patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || true
+        # 启用补丁
+        cd ./common/${{ env.KERNELSU_NAME }}
+        patch -p1 --forward < 10_enable_susfs_for_ksu.patch   || true
         cd ..
-        patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch  || true
-        cp ../../kernel_patches/69_hide_stuff.patch  .
+        patch -p1 < 50_add_susfs_in_gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}.patch || true 
+        cp ../../kernel_patches/69_hide_stuff.patch   ./
         patch -p1 -F 3 < 69_hide_stuff.patch  
-        cp ../../kernel_patches/apk_sign.c_fix.patch  .
+        cp ../../kernel_patches/apk_sign.c_fix.patch   ./
         patch -p1 -F 3 < apk_sign.c_fix.patch   
-        cp ../../kernel_patches/core_hook.c_fix.patch  .
+        cp ../../kernel_patches/core_hook.c_fix.patch   ./
         patch -p1 --fuzz=3 < ./core_hook.c_fix.patch  
-        cp ../../kernel_patches/selinux.c_fix.patch  .
+        cp ../../kernel_patches/selinux.c_fix.patch   ./
         patch -p1 -F 3 < selinux.c_fix.patch  
- 
-    - name: 修改内核构建脚本
-      run: |
-        cd ${{ env.KERNEL_DIR }}/kernel_platform/oplus/build
-        sed -i '203a\export LTO=thin' oplus_setup.sh   
  
     - name: 编译内核 
       run: |
+        cd ${{ env.KERNEL_DIR }}/kernel_platform/oplus/build
+        sed -i '203a\export LTO=thin' oplus_setup.sh  
         cd ${{ env.KERNEL_DIR }}
         export LTO=thin 
-        ./kernel_platform/oplus/build/oplus_build_kernel.sh  kalama gki
+        ./kernel_platform/oplus/build/oplus_build_kernel.sh   ${{ github.event.inputs.CPUD   }} gki 
  
-    - name: 制作 AnyKernel3 
+    - name: 制作 AnyKernel3
       run: |
-        git clone ${{ env.ANYKERNEL3_REPO }} --depth=1
-        rm -rf ./AnyKernel3/.git 
+        git clone ${{ env.ANYKERNEL3_REPO }} --depth=1 
+        rm -rf ./AnyKernel3/.git
         cp ${{ env.KERNEL_DIR }}/out/dist/Image ./AnyKernel3/
  
     - name: 上传 AnyKernel3 
       uses: actions/upload-artifact@v4
       with:
-        name: AnyKernel3_KernelSU_Next_5.15_oneplus_ace3_v 
+        name: AnyKernel3_${{ env.KERNELSU_NAME }}_${{ env.KSUVER }}_${{ github.event.inputs.FEIL   }}
         path: ./AnyKernel3/*
  
     - name: 上传镜像
-      uses: actions/upload-artifact@v4 
+      uses: actions/upload-artifact@v4
       with:
-        name: Image-KernelSU_Next-SUSFS 
+        name: Image-${{ env.KERNELSU_NAME }}_${{ env.KSUVER }}_${{ github.event.inputs.FEIL   }}
         path: ${{ env.KERNEL_DIR }}/out/dist/Image
