--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -28,9 +28,9 @@ env:
   GIT_USER_NAME: yuanqiongyoukong 
   GIT_USER_EMAIL: 413722718@qq.com  
   KERNEL_DIR: kernel 
-  KERNELSU_NAME: KernelSU
+  KERNELSU_NAME: KernelSU-Next
   KERNEL_MANIFEST_URL: https://github.com/OnePlusOSS/kernel_manifest.git  
-  KERNELSU_URL: https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh
+  KERNELSU_URL: https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh  
   SUSFS_REPO: https://gitlab.com/simonpunk/susfs4ksu.git  
   PATCHES_REPO: https://github.com/TheWildJames/kernel_patches.git  
   ANYKERNEL3_REPO: https://github.com/Kernel-SU/AnyKernel3  
@@ -69,10 +69,10 @@ jobs:
         rm -f ${{ env.KERNEL_DIR }}/kernel_platform/msm-kernel/android/abi_gki_protected_exports_* || echo "No protected exports!"
         sed -i 's/ -dirty//g' common/scripts/setlocalversion msm-kernel/scripts/setlocalversion 
  
-    - name: 添加 KernelSU
+    - name: 添加 KernelSU Next 
       run: |
         cd ${{ env.KERNEL_DIR }}/kernel_platform/common
-        curl -LSs ${{ env.KERNELSU_URL }} | bash -s main
+        curl -LSs ${{ env.KERNELSU_URL }} | bash -s next 
         cd ${{ env.KERNELSU_NAME }}
         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) + 10200)
         echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
