--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -26,14 +26,14 @@ on:
  
 env:
   GIT_USER_NAME: yuanqiongyoukong 
-  GIT_USER_EMAIL: 413722718@qq.com  
+  GIT_USER_EMAIL: 413722718@qq.com   
   KERNEL_DIR: kernel 
   KERNELSU_NAME: KernelSU-Next
-  KERNEL_MANIFEST_URL: https://github.com/OnePlusOSS/kernel_manifest.git  
-  KERNELSU_URL: https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh  
-  SUSFS_REPO: https://gitlab.com/simonpunk/susfs4ksu.git  
-  PATCHES_REPO: https://github.com/TheWildJames/kernel_patches.git  
-  ANYKERNEL3_REPO: https://github.com/Kernel-SU/AnyKernel3  
+  KERNEL_MANIFEST_URL: https://github.com/OnePlusOSS/kernel_manifest.git   
+  KERNELSU_URL: https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh   
+  SUSFS_REPO: https://gitlab.com/simonpunk/susfs4ksu.git   
+  PATCHES_REPO: https://github.com/TheWildJames/kernel_patches.git   
+  ANYKERNEL3_REPO: https://github.com/Kernel-SU/AnyKernel3   
  
 jobs:
   build:
@@ -52,79 +52,82 @@ jobs:
  
     - name: 配置 Git 
       run: |
-        git config --global user.name   "${{ env.GIT_USER_NAME }}"
-        git config --global user.email   "${{ env.GIT_USER_EMAIL }}"
+        git config --global user.name  "${GIT_USER_NAME}"
+        git config --global user.email  "${GIT_USER_EMAIL}"
  
-    - name: 安装编译环境
+    - name: 安装编译环境 
       run: |
-        sudo apt update && sudo apt upgrade -y 
+        sudo apt update && sudo apt upgrade -y
         sudo apt install ccache curl git repo python3 python-is-python3 -y
+        curl https://storage.googleapis.com/git-repo-downloads/repo  -o ~/repo 
+        chmod a+x ~/repo
+        sudo mv ~/repo /usr/local/bin/repo
  
     - name: 拉取内核清单
       run: |
-        mkdir -p ${{ env.KERNEL_DIR }} && cd ${{ env.KERNEL_DIR }}
-        repo init -u ${{ env.KERNEL_MANIFEST_URL }} -b oneplus/${{ github.event.inputs.CPU   }} -m ${{ github.event.inputs.FEIL   }}.xml --depth=1 
+        mkdir -p ${KERNEL_DIR} && cd ${KERNEL_DIR}
+        repo init -u ${KERNEL_MANIFEST_URL} -b oneplus/${{ github.event.inputs.CPU  }} -m ${{ github.event.inputs.FEIL  }}.xml --depth=1 
         repo sync -j$(nproc --all)
-        rm -f ${{ env.KERNEL_DIR }}/kernel_platform/common/android/abi_gki_protected_exports_* || echo "No protected exports!"
-        rm -f ${{ env.KERNEL_DIR }}/kernel_platform/msm-kernel/android/abi_gki_protected_exports_* || echo "No protected exports!"
+        rm -f ${KERNEL_DIR}/kernel_platform/common/android/abi_gki_protected_exports_* || echo "No protected exports!"
+        rm -f ${KERNEL_DIR}/kernel_platform/msm-kernel/android/abi_gki_protected_exports_* || echo "No protected exports!"
         sed -i 's/ -dirty//g' common/scripts/setlocalversion msm-kernel/scripts/setlocalversion 
  
     - name: 添加 KernelSU Next 
       run: |
-        cd ${{ env.KERNEL_DIR }}/kernel_platform/common
-        curl -LSs ${{ env.KERNELSU_URL }} | bash -s next 
-        cd ${{ env.KERNELSU_NAME }}
+        cd ${KERNEL_DIR}/kernel_platform/common
+        curl -LSs ${KERNELSU_URL} | bash -s next 
+        cd ${KERNELSU_NAME}
         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) + 10200)
         echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
-        sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" ${{ env.KERNEL_DIR }}/kernel/Makefile 
+        sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" ${KERNEL_DIR}/kernel/Makefile 
  
     - name: 添加 SUSFS
       run: |
-        cd ${{ env.KERNEL_DIR }}
-        git clone ${{ env.SUSFS_REPO }} -b gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}
-        git clone ${{ env.PATCHES_REPO }}
+        cd ${KERNEL_DIR}
+        git clone ${SUSFS_REPO} -b gki-${ANDROID_VERSION}-${KERNEL_VERSION}
+        git clone ${PATCHES_REPO}
         cd kernel_platform
-        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch   ./common/${{ env.KERNELSU_NAME }}/
-        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}.patch ./common/
-        cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
-        cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
+        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch  common/${KERNELSU_NAME}/
+        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${ANDROID_VERSION}-${KERNEL_VERSION}.patch common/
+        cp ../susfs4ksu/kernel_patches/fs/* common/fs/
+        cp ../susfs4ksu/kernel_patches/include/linux/* common/include/linux/
  
-        # 启用补丁
-        cd ./common/${{ env.KERNELSU_NAME }}
-        patch -p1 --forward < 10_enable_susfs_for_ksu.patch   || true
+        # 启用补丁 
+        cd common/${KERNELSU_NAME}
+        patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || true
         cd ..
-        patch -p1 < 50_add_susfs_in_gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}.patch || true 
-        cp ../../kernel_patches/69_hide_stuff.patch   ./
-        patch -p1 -F 3 < 69_hide_stuff.patch  
-        cp ../../kernel_patches/apk_sign.c_fix.patch   ./
-        patch -p1 -F 3 < apk_sign.c_fix.patch   
-        cp ../../kernel_patches/core_hook.c_fix.patch   ./
-        patch -p1 --fuzz=3 < ./core_hook.c_fix.patch  
-        cp ../../kernel_patches/selinux.c_fix.patch   ./
-        patch -p1 -F 3 < selinux.c_fix.patch  
+        patch -p1 < 50_add_susfs_in_gki-${ANDROID_VERSION}-${KERNEL_VERSION}.patch || true 
+        cp ../../kernel_patches/69_hide_stuff.patch  .
+        patch -p1 -F 3 < 69_hide_stuff.patch   
+        cp ../../kernel_patches/apk_sign.c_fix.patch  .
+        patch -p1 -F 3 < apk_sign.c_fix.patch    
+        cp ../../kernel_patches/core_hook.c_fix.patch  .
+        patch -p1 --fuzz=3 < core_hook.c_fix.patch   
+        cp ../../kernel_patches/selinux.c_fix.patch  .
+        patch -p1 -F 3 < selinux.c_fix.patch   
  
     - name: 编译内核 
       run: |
-        cd ${{ env.KERNEL_DIR }}/kernel_platform/oplus/build
-        sed -i '203a\export LTO=thin' oplus_setup.sh  
-        cd ${{ env.KERNEL_DIR }}
+        cd ${KERNEL_DIR}/kernel_platform/oplus/build 
+        sed -i '203a\export LTO=thin' oplus_setup.sh   
+        cd ${KERNEL_DIR}
         export LTO=thin 
-        ./kernel_platform/oplus/build/oplus_build_kernel.sh   ${{ github.event.inputs.CPUD   }} gki 
+        ./kernel_platform/oplus/build/oplus_build_kernel.sh  ${{ github.event.inputs.CPUD  }} gki 
  
     - name: 制作 AnyKernel3
       run: |
-        git clone ${{ env.ANYKERNEL3_REPO }} --depth=1 
-        rm -rf ./AnyKernel3/.git
-        cp ${{ env.KERNEL_DIR }}/out/dist/Image ./AnyKernel3/
+        git clone ${ANYKERNEL3_REPO} --depth=1 
+        rm -rf AnyKernel3/.git
+        cp ${KERNEL_DIR}/out/dist/Image AnyKernel3/
  
     - name: 上传 AnyKernel3 
       uses: actions/upload-artifact@v4
       with:
-        name: AnyKernel3_${{ env.KERNELSU_NAME }}_${{ env.KSUVER }}_${{ github.event.inputs.FEIL   }}
-        path: ./AnyKernel3/*
+        name: AnyKernel3_${KERNELSU_NAME}_${KSUVER}_${{ github.event.inputs.FEIL  }}
+        path: AnyKernel3/*
  
     - name: 上传镜像
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v4 
       with:
-        name: Image-${{ env.KERNELSU_NAME }}_${{ env.KSUVER }}_${{ github.event.inputs.FEIL   }}
-        path: ${{ env.KERNEL_DIR }}/out/dist/Image
+        name: Image-${KERNELSU_NAME}_${KSUVER}_${{ github.event.inputs.FEIL  }}
+        path: ${KERNEL_DIR}/out/dist/Image
