--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -81,18 +81,18 @@ jobs:
     - name: 添加 SUSFS
       run: |
         cd ${KERNEL_DIR}
-        git clone ${SUSFS_REPO} -b gki-${ANDROID_VERSION}-${KERNEL_VERSION}
+        git clone ${SUSFS_REPO} -b gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}
         git clone ${PATCHES_REPO}
         cd kernel_platform
         cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch  common/${KERNELSU_NAME}/
-        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${ANDROID_VERSION}-${KERNEL_VERSION}.patch common/
+        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch common/
         cp ../susfs4ksu/kernel_patches/fs/* common/fs/
         cp ../susfs4ksu/kernel_patches/include/linux/* common/include/linux/
         # 启用补丁 
         cd common/${KERNELSU_NAME}
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || true
         cd ..
-        patch -p1 < 50_add_susfs_in_gki-${ANDROID_VERSION}-${KERNEL_VERSION}.patch || true 
+        patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true 
         cp ../../kernel_patches/69_hide_stuff.patch  .
         patch -p1 -F 3 < 69_hide_stuff.patch   
         cp ../../kernel_patches/apk_sign.c_fix.patch  .
